--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "phpoffice/phpspreadsheet": "^5.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
