--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,40 @@
 {
-
-   "version": 2,
+    "$schema": "https://openapi.vercel.sh/vercel.json",
+    "regions": [
+        "hnd1"
+    ],
     "builds": [
         {
-            "src": "api/index.php",
+            "src": "/api/index.php",
             "use": "vercel-php@0.9.0"
         },
         {
-            "src": "public/**",
-            "use": "vercel-php@0.9.0"
+            "src": "/public/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
+        {
+            "src": "/build/assets/(.*)",
+            "dest": "/public/build/assets/$1"
+        },
+        {
+            "src": "/favicon.(.*)",
+            "dest": "/public/favicon.$1"
+        },
+        {
+            "src": "/apple-touch-icon.png",
+            "dest": "/public/apple-touch-icon.png"
+        },
+        {
+            "src": "/robots.txt",
+            "dest": "/public/robots.txt"
+        },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
     ],
-
     "env": {
         "APP_NAME": "Laravel Vercel",
         "APP_DEBUG": "false",
